Added new notebooks for generating some figures of the manuscript.

--- a/nvisco_bloodclots.ipynb
+++ b/nvisco_bloodclots.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A standalone notebook to \n",
-    "1. Train Govindjee's viscoelasticity model on experimental data for Pig 01 (P01)\n",
-    "2. Pretrain $\\Psi_{EQ}^{NODE}$ with the $\\Psi_{EQ}$ from Govindjee\n",
-    "3. Pretrain $\\Psi_{NEQ}^{NODE}$ with the $\\Psi_{NEQ}$ from Govindjee\n",
-    "4. Pretrain $\\Phi^{NODE}$ with the $\\Phi$ from Govindjee \n",
-    "5. Retrain the whole model with P01 stress-stretch data\n",
-    "\n",
-    "all in a single notebook for the P01 data case. It needs training_data/gov_data.npy and NODE_fns.py to function. \n",
-    "This notebook and nvisco_P01.py contain essentially the same stuff, except for figures. nvisco_P01.py was made to run this notebook on the cluster and instead of showing the figures it just saves them."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -48,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,8 +223,40 @@
     "\n",
     "    return lm1dot, lm2dot, lm3dot, lm1edot, lm2edot, lm3edot\n",
     "\n",
+    "def yprime_uniaxial(y, t, lm1dot, tpeak, params, useNODE):\n",
+    "    lm1, lm2, lm3, lm1e, lm2e, lm3e = y\n",
+    "\n",
+    "    true_fun  = lambda t: np.array(lm1dot)\n",
+    "    false_fun = lambda t: np.array(   0.0, dtype='float64')\n",
+    "    lm1dot = cond(t<tpeak, true_fun, false_fun, t)\n",
+    "\n",
+    "    if useNODE: # use NODE \n",
+    "        Psi_eq_params, Psi_neq_params, Phi_params = params\n",
+    "        tau_A = tau_NEQ_NODE(lm1e, lm2e, lm3e, Psi_neq_params) \n",
+    "        tau_A = np.array([tau_A[0,0], tau_A[1,1], tau_A[2,2]])\n",
+    "        dphidtaui = dPhi_NODE(tau_A, Phi_params)\n",
+    "    else: # use Govindjee\n",
+    "        gov_Psi_eq_params, gov_Psi_neq_params, gov_Phi_params = params\n",
+    "        eta_D, eta_V = gov_Phi_params\n",
+    "        tau_A = tau_Ogden(lm1e, lm2e, lm3e, gov_Psi_neq_params) \n",
+    "        dphidtaui = dPhi_gov(tau_A, eta_D, eta_V)\n",
+    "\n",
+    "    lm1edot = (lm1dot/lm1 - 0.5*dphidtaui[0])*lm1e\n",
+    "\n",
+    "    d = dsigma33([lm1,lm2,lm3,lm1e,lm2e,lm3e], params, useNODE)\n",
+    "    A = -(d[0]*lm1dot + d[3]*lm1edot)/2/d[2]\n",
+    "    B = -d[5]/d[2]\n",
+    "\n",
+    "    Apr = A/lm3\n",
+    "    Bpr = B/lm3\n",
+    "\n",
+    "    lm3edot = (Apr - 0.5*dphidtaui[2])/(1-Bpr*lm3e)*lm3e\n",
+    "    lm3dot = A + B*lm3edot\n",
+    "    lm2dot, lm2edot = lm3dot, lm3edot\n",
+    "    return lm1dot, lm2dot, lm3dot, lm1edot, lm2edot, lm3edot\n",
+    "\n",
     "@partial(jit, static_argnums=(1,))\n",
-    "def biaxial_visco(params, useNODE, time, lm1, lm2):\n",
+    "def biaxial_visco(params, useNODE, time, lm1, lm2): # i.e. sigma33=0\n",
     "    ipeak1 = np.argmax(np.abs(np.around(lm1, 3)-1.0)) #around(lm1, 3) evenly rounds lm1 to 3 decimals\n",
     "    ipeak2 = np.argmax(np.abs(np.around(lm2, 3)-1.0))\n",
     "    ipeak = np.max(np.array([ipeak1,ipeak2]))\n",
@@ -284,7 +301,7 @@
     "    return sig, lm1, lm2, lm3, lm1e, lm2e, lm3e\n",
     "\n",
     "@partial(jit, static_argnums=(1,))\n",
-    "def triaxial_visco(params, useNODE, time, lamb):\n",
+    "def triaxial_visco(params, useNODE, time, lamb): #Confined triaxial loading, i.e. lm2=lm3=1\n",
     "    ipeak = np.argmax(np.abs(np.around(lamb, 3)-1.0)) #around(lm1, 3) evenly rounds lm1 to 3 decimals\n",
     "    tpeak = time[ipeak]\n",
     "    lambpeak = lamb[ipeak]\n",
@@ -292,6 +309,25 @@
     "    lambdot = (lambpeak-1.0)/tpeak\n",
     "\n",
     "    yprime = lambda t, y, args: np.array(yprime_triaxial(y,t,lambdot,tpeak,params,useNODE))\n",
+    "    term = ODETerm(yprime)\n",
+    "    solver = mysolver()\n",
+    "    y0 = np.array([1.0,1.0,1.0,1.0,1.0,1.0])\n",
+    "    saveat = SaveAt(ts=time)\n",
+    "    solution = diffeqsolve(term, solver, t0=0, t1=time[-1], dt0=0.5, y0=y0, saveat=saveat)\n",
+    "    lm1, lm2, lm3, lm1e, lm2e, lm3e = solution.ys.transpose()\n",
+    "\n",
+    "    sig = getsigma([lm1,lm2,lm3,lm1e,lm2e,lm3e], params, useNODE)\n",
+    "    return sig, lm1, lm2, lm3, lm1e, lm2e, lm3e\n",
+    "\n",
+    "@partial(jit, static_argnums=(1,))\n",
+    "def uniaxial_visco(params, useNODE, time, lamb): #Confined triaxial loading, i.e. lm2=lm3=1\n",
+    "    ipeak = np.argmax(np.abs(np.around(lamb, 3)-1.0)) #around(lm1, 3) evenly rounds lm1 to 3 decimals\n",
+    "    tpeak = time[ipeak]\n",
+    "    lambpeak = lamb[ipeak]\n",
+    "\n",
+    "    lambdot = (lambpeak-1.0)/tpeak\n",
+    "\n",
+    "    yprime = lambda t, y, args: np.array(yprime_uniaxial(y,t,lambdot,tpeak,params,useNODE))\n",
     "    term = ODETerm(yprime)\n",
     "    solver = mysolver()\n",
     "    y0 = np.array([1.0,1.0,1.0,1.0,1.0,1.0])\n",
@@ -325,27 +361,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training data\n",
-    "with open('training_data/P01.npy','rb') as f:\n",
+    "with open('training_data/manu_bloodclots.npy','rb') as f:\n",
     "    time, lamb, sigm = pickle.load(f)\n",
     "\n",
     "# 30 sec moving average\n",
-    "moving_av_length = 30\n",
-    "temp1 = moving_average(lamb[0], moving_av_length)\n",
-    "temp2 = moving_average(lamb[1], moving_av_length)\n",
-    "lamb = np.vstack([temp1, temp2])\n",
+    "# moving_av_length = 30\n",
+    "# temp1 = moving_average(lamb[0], moving_av_length)\n",
+    "# temp2 = moving_average(lamb[1], moving_av_length)\n",
+    "# lamb = np.vstack([temp1, temp2])\n",
     "\n",
-    "temp1 = moving_average(sigm[0], moving_av_length)\n",
-    "temp2 = moving_average(sigm[1], moving_av_length)\n",
-    "sigm = np.vstack([temp1, temp2])\n",
+    "# temp1 = moving_average(sigm[0], moving_av_length)\n",
+    "# temp2 = moving_average(sigm[1], moving_av_length)\n",
+    "# sigm = np.vstack([temp1, temp2])\n",
     "\n",
-    "temp1 = moving_average(time[0], moving_av_length)\n",
-    "temp2 = moving_average(time[1], moving_av_length)\n",
-    "time = np.vstack([temp1, temp2])"
+    "# temp1 = moving_average(time[0], moving_av_length)\n",
+    "# temp2 = moving_average(time[1], moving_av_length)\n",
+    "# time = np.vstack([temp1, temp2])"
    ]
   },
   {
@@ -357,12 +393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loss(params, useNODE, time, lm1, sigma):\n",
-    "    sigma_pr,_,_,_,_,_,_ = triaxial_visco(params, useNODE, time, lm1)\n",
+    "    sigma_pr,_,_,_,_,_,_ = uniaxial_visco(params, useNODE, time, lm1)\n",
     "    loss = np.sqrt((sigma_pr[:,0,0]-sigma[:])**2)\n",
     "    return loss/lm1.shape[0]\n",
     "loss_vmap = vmap(loss, in_axes=(None, None, 0, 0, 0), out_axes=0)\n",
@@ -393,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,28 +462,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "it 0, train loss = 9.450482e-01\n",
-      "it 50, train loss = 4.770408e-01\n",
-      "it 100, train loss = 1.894896e-02\n",
-      "it 0, train loss = 2.108521e-02\n",
-      "it 50, train loss = 1.885306e-02\n",
-      "it 100, train loss = 1.703247e-02\n",
-      "it 0, train loss = 1.991767e-02\n",
-      "it 50, train loss = 4.903432e-03\n",
-      "it 100, train loss = 4.678333e-03\n",
-      "it 0, train loss = 1.055379e-02\n",
-      "it 50, train loss = 4.673559e-03\n",
-      "it 100, train loss = 4.657211e-03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I know this is a dumb way of doing it. please don't judge me.\n",
     "for lr in [1.0e-2, 1.0e-3, 1.0e-4, 1.0e-5]:\n",
@@ -455,7 +472,7 @@
     "    opt_state = opt_init(gov_params)\n",
     "    gov_params, train_loss, val_loss = train(time, lamb, sigm, opt_state, key, nIter = 100, batch_size=2)\n",
     "    \n",
-    "with open('saved/P01_gov_params.npy', 'wb') as f:\n",
+    "with open('saved/bloodclots_gov_params.npy', 'wb') as f:\n",
     "    pickle.dump(gov_params, f)"
    ]
   },
