Added minor updates

--- a/train_brain.ipynb
+++ b/train_brain.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Train Govindjee's model"
+    "# 1. Train Govindjee's model"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Train $\\Psi_{EQ}$ and $\\Psi_{NEQ}$"
+    "# 2. Train $\\Psi_{EQ}$ and $\\Psi_{NEQ}$"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 $\\Psi_{NEQ}$"
+    "## 2.2 $\\Psi_{NEQ}$"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Train $\\Phi^{NODE}$ with $\\Phi^{Govindjee}$"
+    "# 3. Train $\\Phi^{NODE}$ with $\\Phi^{Govindjee}$"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Test"
+    "# 4. Test"
    ]
   },
   {
@@ -658,6 +658,13 @@
     "ax.plot(t,-sig_NN[:,0,0])\n",
     "ax.plot(t,-sig_NN[:,1,1])\n",
     "ax.plot(t,-sig_NN[:,2,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Retrain"
    ]
   },
   {
