--- a/train_rubber.ipynb
+++ b/train_rubber.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Train Govindjee's model"
+    "# 1. Train Govindjee's model"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Train $\\Psi_{EQ}$ and $\\Psi_{NEQ}$"
+    "# 2. Train $\\Psi_{EQ}$ and $\\Psi_{NEQ}$"
    ]
   },
   {
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 $\\Psi_{NEQ}$"
+    "## 2.2 $\\Psi_{NEQ}$"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Train $\\Phi^{NODE}$ with $\\Phi^{Govindjee}$"
+    "# 3. Train $\\Phi^{NODE}$ with $\\Phi^{Govindjee}$"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Test"
+    "# 4. Test"
    ]
   },
   {
@@ -631,6 +631,13 @@
     "    ax[i].plot(t,sig_NN[:,0,0],'k-')\n",
     "    ax[i].plot(t,sig_NN[:,1,1],'b-')\n",
     "    ax[i].plot(t,sig_NN[:,2,2],'g-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Retrain"
    ]
   },
   {
@@ -770,10 +777,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   "hash": "920e7a8945330110f9e03acbda53cbdd3d881ab4a4172d15e426a9c275db3432"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.10.4 ('jax')",
    "language": "python",
    "name": "python3"
   },
@@ -787,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
