Unified the training and loss functions in train_bloodclots.ipynb. Will do the same for the other files as well.

--- a/train_rubber.ipynb
+++ b/train_rubber.ipynb
@@ -9,8 +9,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/homebrew/lib/python3.9/site-packages/jax/_src/lib/__init__.py:33: UserWarning: JAX on Mac ARM machines is experimental and minimally tested. Please see https://github.com/google/jax/issues/5501 in the event of problems.\n",
-      "  warnings.warn(\"JAX on Mac ARM machines is experimental and minimally tested. \"\n",
       "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     }
@@ -44,9 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('training_data/Rubber/NR1/singlestep.npy','rb') as f:\n",
+    "with open('training_data/Rubber/HDR/singlestep.npy','rb') as f:\n",
     "    time, lm, sgm_x = np.load(f)\n",
     "time = np.expand_dims(time,0)\n",
+    "time = np.abs(time)\n",
     "lm = np.expand_dims(lm,0)\n",
     "sgm_x = np.expand_dims(sgm_x,0)"
    ]
@@ -138,7 +137,7 @@
     "opt_state = opt_init(gov_params)\n",
     "gov_params, train_loss, val_loss = train(time, lm, sgm_x, gov_norm, opt_state, key, nIter = 8000, batch_size=1)\n",
     "    \n",
-    "with open('saved/NR1_gov_params.npy', 'wb') as f:\n",
+    "with open('saved/HDR_gov_params.npy', 'wb') as f:\n",
     "    pickle.dump(gov_params, f)"
    ]
   },
@@ -172,7 +171,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=[5,5])\n",
-    "sigm_pr, lm1,lm2,lm3,lm1e,lm2e,lm3e = uniaxial_visco(gov_params, gov_norm, False, time[0], lm0)\n",
+    "sigm_pr, lm1,lm2,lm3,lm1e,lm2e,lm3e = uniaxial_relax(gov_params, gov_norm, False, time[0], lm0)\n",
     "\n",
     "ax.plot(time[0],sgm_x[0],'k.')\n",
     "ax.plot(time[0],-sigm_pr[:,0,0])\n",
