Created notebooks for training with different brain data such as COrtex, Basal Ganglia, Carpus Callosum and Corona Radiata. Unified training functions in most of the training notebooks.

--- a/training_data/Brain_data.ipynb
+++ b/training_data/Brain_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,30 @@
     "matplotlib.rc('font', **font)\n",
     "import pickle\n",
     "from scipy.signal import savgol_filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nondecreasing_time(aux):\n",
+    "    aux[:,0] = np.abs(aux[:,0])\n",
+    "    flag1 = True\n",
+    "    mask = np.ones(aux.shape[0], dtype=bool)\n",
+    "    while flag1:\n",
+    "        flag2 = True\n",
+    "        for i in range(1,aux.shape[0]):\n",
+    "            if aux[i,0]<aux[i-1,0]:\n",
+    "                mask[i] = 0\n",
+    "                aux = aux[mask]\n",
+    "                mask = np.ones(aux.shape[0], dtype=bool)\n",
+    "                flag2 = False\n",
+    "                break\n",
+    "        if flag2:\n",
+    "            flag1 = False\n",
+    "    return aux"
    ]
   },
   {
@@ -1367,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1394,6 +1418,8 @@
     "fig, ax = plt.subplots(figsize=[12,12])\n",
     "ax.plot(aux[:,0],aux[:,1])\n",
     "ax.plot(aux[6,0],aux[6,1], 'o')\n",
+    "\n",
+    "aux = nondecreasing_time(aux)\n",
     "\n",
     "all_CR_comprelax_C1 = aux\n",
     "with open('Brain/Average/C1/Comp relaxation/CR.npy', 'wb') as f:\n",
@@ -2146,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2174,6 +2200,7 @@
     "ax.plot(aux[:,0],aux[:,1])\n",
     "ax.plot(aux[7,0],aux[7,1], 'o')\n",
     "\n",
+    "\n",
     "all_CR_shearrelax_C3 = aux\n",
     "with open('Brain/Average/C3/Shear relaxation/CR.npy', 'wb') as f:\n",
     "    np.save(f,all_CR_shearrelax_C3, allow_pickle=True)"
@@ -2195,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 842,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2225,6 +2252,8 @@
     "fig, ax = plt.subplots(figsize=[12,12])\n",
     "ax.plot(aux[:,0],aux[:,1])\n",
     "ax.plot(aux[0,0],aux[0,1], 'o')\n",
+    "\n",
+    "aux = nondecreasing_time(aux)\n",
     "\n",
     "all_CO_comprelax_C3 = aux\n",
     "with open('Brain/Average/C3/Comp relaxation/CO.npy', 'wb') as f:\n",
