--- a/training_data/Rubber_data.ipynb
+++ b/training_data/Rubber_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +155,23 @@
     "\n",
     "with open('Rubber/HDR/singlestep.npy', 'wb') as f:\n",
     "    np.save(f,[time, lm, sgm_x], allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.002553700056012076\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.min(np.diff(time)))"
    ]
   },
   {
